K8-manifest/app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: qa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: nodejs-app
        image: mayankdev12/nodejs-app:f028f931bbca508464991d7ea24a67297d3fcac5
        ports:
        - containerPort: 5000
